--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^0.4.4+3       # FIREBASE CORE
   firebase_auth: ^0.16.0        # LOGIN BY FIREBASE ACCOUNT
   google_sign_in: ^4.0.1+1      # LOGIN BY GOOGLE ACCOUNT
+  flutter_facebook_login: ^3.0.0 
   #===========================================================
   # HTTP: CALL JSON
   #===========================================================   
