--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   #===========================================================
   # CLOUD STORAGE TO KEEP IMAGE
   #===========================================================   
-  image_picker: ^0.6.0+17    
+  image_picker: ^0.6.0+17   
+  video_player: ^0.10.9+1  
   firebase_storage: ^3.0.3    
   #===========================================================
   # GOOGLE SIGN-IN (FIREBASE)
